publish: Changing title of CUG section.
generated from commit 4e68257459f35bc736dfac6c6497f0657157a673

--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@ The JSON structure includes an array of `Names`, which seems to infer the abilit
     </span><span class="s2">"IsUsed"</span><span class="p">:</span><span class="w"> </span><span class="kc">false</span><span class="p">,</span><span class="w">
     </span><span class="s2">"Discount"</span><span class="p">:</span><span class="w"> </span><span class="mi">500</span><span class="p">,</span><span class="w">
     </span><span class="s2">"MinNights"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p">,</span><span class="w">
-    </span><span class="s2">"ExpiresOn"</span><span class="p">:</span><span class="w"> </span><span class="s2">"11-06-2018"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"ExpiresOn"</span><span class="p">:</span><span class="w"> </span><span class="s2">"2018-11-06"</span><span class="p">,</span><span class="w">
     </span><span class="s2">"MaxUses"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p">,</span><span class="w">
     </span><span class="s2">"IsPercentage"</span><span class="p">:</span><span class="w"> </span><span class="kc">false</span><span class="p">,</span><span class="w">
     </span><span class="s2">"Terms"</span><span class="p">:</span><span class="w"> </span><span class="s2">""</span><span class="w">
@@ -1125,7 +1125,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 <td>Terms</td>
 <td>string</td>
 <td>Yes</td>
-<td>Terms of coupon usage. May be set to <code>&quot;&quot;</code>.</td>
+<td>Set to <code>&quot;&quot;</code>.</td>
 </tr>
 </tbody></table>
 <h2 id='get-a-coupon-code'>Get a Coupon/Code</h2>
