publish: Clarifying URL encoding/decoding of tokens and when to do that.
generated from commit c00a2ba6d7a6f2b8c3fc3863844d9519777a0a24

--- a/index.html
+++ b/index.html
@@ -2792,10 +2792,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 
     <!-- Zoho Sales IQ chat -->
     <script type="text/javascript">
-    var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq ||
-    {widgetcode:"85c29199536e15afee0f47667cfa8b892eafebb16a64b7ae0865c5843b3919f7948ed5afeb7e0ca1b1f47f3dc167a496", values:{},ready:function(){}};
-    var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;
-    s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);d.write("<div id='zsiqwidget'></div>");
+    var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode:"e5889e29d9183daec18d9a6b8dc0405081b74d469084cb01ee414537d5e3fe9b", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);d.write("<div id='zsiqwidget'></div>");
     </script>
   </body>
 </html>
