publish: Adding Inventory On Hold section.
generated from commit 9239956dd7ac3c7abea1b0145474de8e61dfb084

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
               </ul>
           </li>
           <li>
-            <a href="#inventory-on-hold" class="toc-h1 toc-link" data-title="inventory-on-hold">Inventory On Hold</a>
+            <a href="#inventory-on-hold" class="toc-h1 toc-link" data-title="inventory-on-hold">Inventory on hold</a>
               <ul class="toc-list-h2">
                   <li>
                     <a href="#get-all-holds" class="toc-h2 toc-link" data-title="get-all-holds">Get All Holds</a>
@@ -1350,7 +1350,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 <td>The code to invalidate</td>
 </tr>
 </tbody></table>
-<h1 id='inventory-on-hold'>Inventory On Hold</h1>
+<h1 id='inventory-on-hold'>Inventory on hold</h1>
 <p>This section is only for those using the SSO Authentication feature and pertains to managing contracted inventory, specifically that which has been placed &quot;on hold&quot;.  </p>
 
 <p>You will need a Site Admin user in your closed user group site. If you don&#39;t already have one, please <a href="mailto:hello@hotelsforhope.com?Subject=Request%20for%20Site%20Admin%20User">request one</a> be added for your portal/site.</p>
