publish: Updating nav capitalization.
generated from commit 78edf465c0146948c1d8c1c2ca9fea2f4565a676

--- a/index.html
+++ b/index.html
@@ -288,6 +288,9 @@
             <a href="#inventory-on-hold" class="toc-h1 toc-link" data-title="inventory-on-hold">Inventory on hold</a>
               <ul class="toc-list-h2">
                   <li>
+                    <a href="#create-a-hold" class="toc-h2 toc-link" data-title="create-a-hold">Create a Hold</a>
+                  </li>
+                  <li>
                     <a href="#get-all-holds" class="toc-h2 toc-link" data-title="get-all-holds">Get All Holds</a>
                   </li>
                   <li>
@@ -295,6 +298,9 @@
                   </li>
                   <li>
                     <a href="#get-property-info" class="toc-h2 toc-link" data-title="get-property-info">Get Property Info</a>
+                  </li>
+                  <li>
+                    <a href="#cancel-a-hold" class="toc-h2 toc-link" data-title="cancel-a-hold">Cancel a Hold</a>
                   </li>
               </ul>
           </li>
@@ -1355,6 +1361,8 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 
 <p>You will need a Site Admin user in your closed user group site. If you don&#39;t already have one, please <a href="mailto:hello@hotelsforhope.com?Subject=Request%20for%20Site%20Admin%20User">request one</a> be added for your portal/site.</p>
 
+<p>To book a reservation for any held room type, simply use the <code>roomTypeId</code> identfier when creating a reservation.</p>
+
 <aside class="warning">
 Please note the Authentication method for these calls is not consistent with other calls. For these calls, all calls must include a basic authentication header using the username (email address) and password of an authorized user for the `siteId` you are querying.
 
@@ -1368,6 +1376,91 @@ Just as the authentication for this set of endpoints is different, please note t
 
 `https://groups.alliancereservations.com/services/external` is the base path for this set of endpoints.
 </aside>
+<h2 id='create-a-hold'>Create a Hold</h2>
+<p>You may retrieve a list of the room types (you&#39;ll need the room code / room type id) available to put on hold via an Availability Search and specifying gateway <code>16</code> (contracted inventory) (authorized, as mentioned above, using a basic authentication header) to this endpoint. Calling this endpoint successfully will return a 200 response code, but no body.</p>
+<pre class="highlight shell tab-shell"><code>curl -X POST <span class="se">\</span>
+<span class="s2">"https://groups.alliancereservations.com/services/external/roomtypesonhold?&amp;roomTypeId={PARENT-BLOCK-ROOM-TYPE-ID}&amp;createHold"</span> <span class="se">\</span>
+-H <span class="s1">'Authorization: Basic {BASE64-ENCODED-STRING}'</span>
+</code></pre>
+<blockquote>
+<p>The above command returns JSON structured like this:</p>
+</blockquote>
+<pre class="highlight json tab-json"><code></code></pre><h3 id='http-request'>HTTP Request</h3>
+<p><code>POST https://groups.alliancereservations.com/services/external/roomtypesonhold</code></p>
+<h3 id='query-parameters'>Query Parameters</h3>
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>Type</th>
+<th>Required</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>roomTypeId</td>
+<td>integer</td>
+<td>Yes</td>
+<td><code>ArnResponse.Availability.HotelAvailability.Hotel.RatePlan.Room.@Code</code> from an Availability Search (parent block)</td>
+</tr>
+<tr>
+<td>createHold</td>
+<td>void</td>
+<td>Yes</td>
+<td>Specifies this is a create</td>
+</tr>
+</tbody></table>
+<h3 id='post-form-data-parameters'>POST form-data Parameters</h3>
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>Type</th>
+<th>Required</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>roomTypeId</td>
+<td>integer</td>
+<td>Yes</td>
+<td><code>ArnResponse.Availability.HotelAvailability.Hotel.RatePlan.Room.@Code</code> from an Availability Search (parent block)</td>
+</tr>
+<tr>
+<td>createHold</td>
+<td>void</td>
+<td>Yes</td>
+<td>Specifies this is a create</td>
+</tr>
+<tr>
+<td>blockDescription</td>
+<td>string</td>
+<td>Yes</td>
+<td>Name this on hold block</td>
+</tr>
+<tr>
+<td>roomCountPerNight</td>
+<td>integer</td>
+<td>Yes</td>
+<td>Number of rooms to hold</td>
+</tr>
+<tr>
+<td>blockStartDate</td>
+<td>date</td>
+<td>Yes</td>
+<td>Start date of held rooms</td>
+</tr>
+<tr>
+<td>blockEndDate</td>
+<td>date</td>
+<td>Yes</td>
+<td>End date of held rooms</td>
+</tr>
+<tr>
+<td>blockReleaseDate</td>
+<td>date</td>
+<td>Yes</td>
+<td>Date when hold will expire</td>
+</tr>
+</tbody></table>
 <h2 id='get-all-holds'>Get All Holds</h2>
 <p>You may retrieve a list of the room types on hold via <code>GET</code> request, (authorized, as mentioned above, using a basic authentication header) to this endpoint. Calling this endpoint successfully will return an array of API endpoing URIs for each room type currently on hold.</p>
 
@@ -1540,6 +1633,33 @@ Either the `affiliateId` or `siteId` must be passsed into this endpoint.  This e
 <td>integer</td>
 <td>Yes</td>
 <td>The property id</td>
+</tr>
+</tbody></table>
+<h2 id='cancel-a-hold'>Cancel a Hold</h2>
+<p>You may retrieve a list of the room types (you&#39;ll need the room code / room type id) available to put on hold via an Availability Search and specifying gateway <code>16</code> (contracted inventory) (authorized, as mentioned above, using a basic authentication header) to this endpoint. Calling this endpoint successfully will return a 200 response code, but no body.</p>
+<pre class="highlight shell tab-shell"><code>curl -X POST <span class="se">\</span>
+<span class="s2">"https://groups.alliancereservations.com/services/external/roomtypesonhold?&amp;roomTypeId={PARENT-BLOCK-ROOM-TYPE-ID}&amp;cancelHold"</span> <span class="se">\</span>
+-H <span class="s1">'Authorization: Basic {BASE64-ENCODED-STRING}'</span>
+</code></pre>
+<blockquote>
+<p>The above command returns JSON structured like this:</p>
+</blockquote>
+<pre class="highlight json tab-json"><code></code></pre><h3 id='http-request'>HTTP Request</h3>
+<p><code>POST https://groups.alliancereservations.com/services/external/roomtypesonhold</code></p>
+<h3 id='query-parameters'>Query Parameters</h3>
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>Type</th>
+<th>Required</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>roomTypeId</td>
+<td>integer</td>
+<td>Yes</td>
+<td><code>ArnResponse.Availability.HotelAvailability.Hotel.RatePlan.Room.@Code</code> from an Availability Search (parent block)</td>
 </tr>
 </tbody></table>
 <h1 id='hotels'>Hotels</h1><h2 id='availability-search'>Availability Search</h2>
