publish: Being more specific in Hold docs.
generated from commit 9aed5b439ec64eb3ceed6aaae74507729e5587ea

--- a/index.html
+++ b/index.html
@@ -2061,7 +2061,18 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
         </span><span class="s2">"@Children"</span><span class="p">:</span><span class="w"> </span><span class="s2">"0"</span><span class="p">,</span><span class="w">
         </span><span class="s2">"Hotel"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
           </span><span class="s2">"@HotelID"</span><span class="p">:</span><span class="w"> </span><span class="s2">"272393"</span><span class="p">,</span><span class="w">
-          </span><span class="s2">"@IsEphemeral"</span><span class="p">:</span><span class="w"> </span><span class="s2">"true"</span><span class="p">,</span><span class="w">
+          </span><span class="s2">"@HotelInfo"</span><span class="p">:</span><span class="w"> </span><span class="s2">"https://api.travsrv.com/api/content/findpropertyinfo?propertyid=272393&amp;locale={{locale}}"</span><span class="p">,</span><span class="w">
+          </span><span class="s2">"@Latitude"</span><span class="p">:</span><span class="w"> </span><span class="s2">"30.2334"</span><span class="p">,</span><span class="w">
+          </span><span class="s2">"@Longitude"</span><span class="p">:</span><span class="w"> </span><span class="s2">"-97.74027"</span><span class="p">,</span><span class="w">
+          </span><span class="s2">"@Name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"La Quinta Inn Austin Oltorf"</span><span class="p">,</span><span class="w">
+          </span><span class="s2">"@Address1"</span><span class="p">:</span><span class="w"> </span><span class="s2">"1603 East Oltorf Blvd"</span><span class="p">,</span><span class="w">
+          </span><span class="s2">"@City"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Austin"</span><span class="p">,</span><span class="w">
+          </span><span class="s2">"@CountryCode"</span><span class="p">:</span><span class="w"> </span><span class="s2">"US"</span><span class="p">,</span><span class="w">
+          </span><span class="s2">"@ImageThumbnail"</span><span class="p">:</span><span class="w"> </span><span class="s2">"https://media.travsrv.com/272393/124017095_70.jpg"</span><span class="p">,</span><span class="w">
+          </span><span class="s2">"@LocationDescription"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Near South Congress Avenue"</span><span class="p">,</span><span class="w">
+          </span><span class="s2">"@TripAdvisorReviewCount"</span><span class="p">:</span><span class="w"> </span><span class="s2">"377"</span><span class="p">,</span><span class="w">
+          </span><span class="s2">"@TripAdvisorRating"</span><span class="p">:</span><span class="w"> </span><span class="s2">"2.5"</span><span class="p">,</span><span class="w">
+          </span><span class="s2">"@PriceClass"</span><span class="p">:</span><span class="w"> </span><span class="s2">"2 Stars"</span><span class="w">
           </span><span class="s2">"RatePlan"</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="w">
             </span><span class="p">{</span><span class="w">
               </span><span class="s2">"@Code"</span><span class="p">:</span><span class="w"> </span><span class="s2">"F89648494F22FFE25A254AD1CE7D18FD27B862F1A609BD28872D9CD6DDA2E956B160BE3DB7EB0191B160BE3DB7EB01917EA3048807BEE935"</span><span class="p">,</span><span class="w">
