publish: Sync with upstream
generated from commit 83f6b7ac21aaedef20e70b35bac524b03874ff94

--- a/index.html
+++ b/index.html
@@ -3307,7 +3307,7 @@ type=findfeaturedhoteldeals</span><span class="se">\</span><span class="s2">
 <td>locationid</td>
 <td>int</td>
 <td>No</td>
-<td>Found via <a href="#deals-locationid-search">locationid search</a></td>
+<td>Found via <a href="#location-id-search">locationid search</a></td>
 </tr>
 <tr>
 <td>mindiscount</td>
